Fixing spacing and adding pages

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -91,7 +91,6 @@ body {
   .content{
     flex: 1;
     height:100%;
-    padding:20px;
   }
 
 
